Thu Sep 25 04:57:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-unittest.sql:

          . Inserted a table for storing grouping information for a unit
            test.

        * utils/BMW/assemblies/CUTS.Data/CUTS.Data.mpc:

          . Implemented an abstract data type for storing the results
            of a unit test group. This data type is built on top of the
            basic UnitTestResult type.

Wed Sep 24 15:02:28 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/assemblies/CUTS.Data/CUTS.Data.mpc:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/UnitTestResult.cs:
        * utils/BMW/assemblies/CUTS.Web:
        * utils/BMW/assemblies/CUTS.Web/CUTS.Web.mpc:
        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/UnitTesting/TestPackage.cs:
        * utils/BMW/website/performance.aspx:
        * utils/BMW/website/performance.aspx.cs:

          . Refactored to 'Unit Testing' tab on the performance.aspx page
            so that the control used to display a unit test is a
            CompositeControl. This removed all the implementation used to
            display a test package, and its unit test, from the performance
            page and making its a LOT cleaner.

Wed Sep 24 14:01:31 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * install/CUTS_CoSMIC.wxs:

          . Removed deprecated attributes from the installer script.

Wed Sep 24 13:54:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GEMS/GEMS_CRN.mpc:
        * MDE/GME/T2M/T2M.mpc:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.mpc:
        * MDE/GME/T2M/parsers/T2M_Parser.mpc:

          . Removed the last coupling of the CUTS runtime architecture from the
            CUTS modeling tools.

Wed Sep 24 05:23:15 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
