@@ -1,3 +1,10 @@
+Thu Sep 25 05:00:05 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/UnitTestGroupResult.cs:
+
+          . Forgot the add the source file related to the previous ChangeLog
+            entry.
+
 Thu Sep 25 04:57:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * etc/SQL/CUTS-unittest.sql:
